@@ -1,6 +1,7 @@
 DIST rake-0.8.1.gem 90112 RMD160 fbb00b09f577b71081fe01c7e318e54acaabf37c SHA1 349b0853d5a32012a8f282750c2f1abaf1169213 SHA256 7cd2e89c7736a7829f1fbc2a2ecbd7f911ee68d170ea31ad2b8277b943380227
 DIST rake-0.8.2.gem 99328 RMD160 f813ae1ec6cb5a39e93ca44ed8b459365f3adafd SHA1 bb6c24933b51686127323732ed56fe4507b1f1ee SHA256 6d932c26000dbbd95c3a059e11239e2a525dd9d1ef9a26168ef3919d1e23292f
 EBUILD rake-0.8.1-r1.ebuild 907 RMD160 bff3b0d9e1c75f93a0d77e2cda8f75547a0d2a5e SHA1 82aaed3b207cbe603cedd5fa11c7752bdea8191e SHA256 af00e6084a6fdc71859e1ac1dbf27345fef903cace29ac3ab69e8b997dfc4c3c
+EBUILD rake-0.8.2-r1.ebuild 650 RMD160 60b4a71a7f9e6b329359a50298e47add9f5ed2cd SHA1 0d95ea1d4468f51e930a5c2306ebf01c59f9ac51 SHA256 94d7b41e4aa6d5f8f4ab280d43c5075a7d2160b4e4b47604903faba7fdc53331
 EBUILD rake-0.8.2.ebuild 907 RMD160 bff3b0d9e1c75f93a0d77e2cda8f75547a0d2a5e SHA1 82aaed3b207cbe603cedd5fa11c7752bdea8191e SHA256 af00e6084a6fdc71859e1ac1dbf27345fef903cace29ac3ab69e8b997dfc4c3c
-MISC ChangeLog 7546 RMD160 461b1ac66e7ee7a679d9863d388285043bed6505 SHA1 b2cb73cc49863de055d9d64b6501eaf9f56c8a63 SHA256 f07929c15da0f8adbe4289d0c4d73c3efe2a2752055803fb5bae359ae4b7158b
+MISC ChangeLog 7667 RMD160 bd8ad745266966d787f147c6fe6ba1d04cb21da3 SHA1 d6176cab7b5e3dbd4dac7df78ba89ff7b1a68c74 SHA256 f037257b31764793765ad782623ed76159b960ba235e7156240322d742872629
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
